# Skill-Agent-File-Linter

./: .gitignore  Cargo.toml  README.md  RULES.md  action.yml
.github/workflows/: ci.yml
corpus/: clean_skill.md
corpus/AGT001/: bidi_negative.md  bidi_positive.md
corpus/AGT002/: zwsp_negative.md  zwsp_positive.md
corpus/AGT003/: tag_negative.md  tag_positive.md
corpus/AGT005/: nonprintable_negative.md  nonprintable_positive.md
corpus/AGT007/: ansi_negative.md  ansi_positive.md
corpus/AGT020/: override_negative.md  override_positive.md
corpus/AGT021/: jailbreak_negative.md  jailbreak_positive.md
corpus/AGT040/: image_exfil_negative.md  image_exfil_positive.md
corpus/AGT042/: sensitive_paths_negative.md  sensitive_paths_positive.md
corpus/AGT060/: pinned_negative.json  unpinned_positive.json
corpus/AGT080/: good_trigger_negative.md  missing_trigger_positive.md
crates/agentlint-action/: Cargo.toml
crates/agentlint-action/src/: main.rs
crates/agentlint-cli/: Cargo.toml
crates/agentlint-cli/src/: main.rs
crates/agentlint-cli/src/commands/: check.rs  explain.rs  fix.rs  list_rules.rs  mod.rs
crates/agentlint-cli/src/output/: human.rs  json_out.rs  mod.rs  sarif.rs
crates/agentlint-core/: Cargo.toml
crates/agentlint-core/src/: engine.rs  file_type.rs  finding.rs  lib.rs  rule_registry.rs  source_file.rs
crates/agentlint-core/src/parser/: frontmatter.rs  json.rs  markdown.rs  mod.rs
crates/agentlint-core/src/rules/: mod.rs
crates/agentlint-core/src/rules/exfiltration/: agt040_image_exfil.rs  agt041_auto_fetch_url.rs  agt042_sensitive_paths.rs  agt043_network_file_combo.rs  mod.rs
crates/agentlint-core/src/rules/injection/: agt020_ignore_instructions.rs  agt021_roleplay_jailbreak.rs  agt022_system_impersonation.rs  agt023_authority_claim.rs  agt024_urgency_threat.rs  mod.rs
crates/agentlint-core/src/rules/mcp/: agt060_unpinned_source.rs  agt061_private_url.rs  agt062_exfil_pair.rs  agt063_rce_pair.rs  agt064_description_mismatch.rs  mod.rs
crates/agentlint-core/src/rules/skill/: agt080_missing_trigger.rs  agt081_external_file_ref.rs  agt082_disable_safety.rs  mod.rs
crates/agentlint-core/src/rules/unicode/: agt001_bidi.rs  agt002_zero_width.rs  agt003_tag_chars.rs  agt004_confusables.rs  agt005_nonprintable.rs  agt006_mixed_scripts.rs  agt007_ansi_escape.rs  mod.rs
crates/agentlint-core/tests/: golden.rs  proptest_unicode.rs
rules/: agt020_instruction_override.toml  agt021_roleplay_jailbreak.toml  agt023_authority_claims.toml  agt024_urgency_threat.toml  agt042_sensitive_paths.toml  agt082_disable_safety.toml
