[package]
name    = "agentlint-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentlint"
path = "src/main.rs"

[dependencies]
agentlint-core = { path = "../agentlint-core" }
serde          = { workspace = true }
serde_json     = { workspace = true }
clap           = { workspace = true }
ignore         = { workspace = true }
miette         = { workspace = true }
thiserror      = { workspace = true }
owo-colors     = { workspace = true }
once_cell      = { workspace = true }
anyhow         = { workspace = true }
