[package]
name    = "agentlint-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
saphyr          = { workspace = true }
tree-sitter    = { workspace = true }
tree-sitter-md = { workspace = true }
regex          = { workspace = true }
aho-corasick   = { workspace = true }
memchr         = { workspace = true }
once_cell      = { workspace = true }
unicode-script = { workspace = true }
miette         = { workspace = true }
thiserror      = { workspace = true }
owo-colors     = { workspace = true }
walkdir        = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
proptest = { workspace = true }
